--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "kobre_kim",
   "version": "1.0.0",
   "description": "Sample API Call",
-  "main": "request.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chloe Chong",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.3"
+  }
 }
